--- a/README.Rmd
+++ b/README.Rmd
@@ -13,70 +13,87 @@ knitr::opts_chunk$set(
   fig.path = "README-"
 )
 library(ggplot2)
-library(FEWS)
+library(GEKSdecomp)
 ```
 
-# FEWS
-
-The FEWS method was introduced by Frances Krsinich in [The FEWS index: Fixed effects with a window splice](https://www.researchgate.net/publication/303888203_The_FEWS_index_Fixed_effects_with_a_window_splice). 
-This FEWS package aims to provide a flexible implementation of that method, with some additional splicing options available for users.
-As well as producing an index, the package provides users with some diagnostic results on the FEWS calculation which may be of use in data exploration, or in monitoring of production systems.
-In addition the package provides some utilities commonly used by Pricing teams from Statistical Agencies such as converting between indexes and movements.
+# GEKS-Tornqvist Decomposition
 
 
-# Installation
-FEWS is still in development, with the intention that it will exist on CRAN. For now it can be installed from GitHub using the following code
-```{r, eval = FALSE}
+This package focuses on one function `GEKSdecomp`, which decomposes the multilateral GEWKS-Tornqvist index into the contributions of individual commodities. The calculation is based purely on the *Decomposing Multilateral Price Indexes into the Contributions of Individual Commodities* paper written by *Michael Webster* and *Rory C. Tarnow-Mordi*. It uses the techinque 
+described under section [2.2 Decomposition of the CCD and GEKS Methods](https://www.researchgate.net/publication/333875150_Decomposing_Multilateral_Price_Indexes_into_the_Contributions_of_Individual_Commodities).
 
-devtools::install_github("Donal-lynch/FEWS_package")
+This package should be coupled with the [GEKS package](https://github.com/MjStansfi/GEKS_package). Also see the alternates available for the FEWS (time product dummy) multilateral method here [FEWS package](https://github.com/MjStansfi/FEWS_package) and
+[TPD decomposition](https://github.com/MjStansfi/TPDDecomp)
+
+#Installation
+
+
+The GEKS decomposition function can be installed from GitHub using the following code
+
+``` {r}
+
+devtools::install_github("MjStansfi/GEKSdecomp")
 
 # Once installed, the package can be loaded as usual
-library(FEWS)
-
-
+library(GEKSdecomp)
 ```
 
-# Usage
-The primary function provided by the FEWS package is the `FEWS()` function. Running `?FEWS()` should give all the required information on how using the function.
-An example of running the `FEWS()` the function is shown below.
+#Usage
 
 
-## Example
+The primary function provided by the the package is the `GEKS_decomp()` function. Running `?GEKS_decomp()` will give all the required information on how to use the function. An example of running the `GEKS_decomp()` the function is shown below.
 
-As part of the package, a couple of datasets are provided, including the Turvery dataset as found in the [Consumer Price Index Manual](https://www.ilo.org/wcmsp5/groups/public/---dgreports/---stat/documents/presentation/wcms_331153.pdf).
 
-```{r data_viz}
+#Example
+
+
+This pacakge includes the Turvey dataset as found in the [Consumer Price Index Manual](https://www.ilo.org/wcmsp5/groups/public/---dgreports/---stat/documents/presentation/wcms_331153.pdf).
+
+```{r}
+library(ggplot2)
 ggplot(turvey, aes(x = month, y = price)) + 
   geom_line(aes(color = commodity)) + 
   geom_point(aes(color = commodity))+
   theme_bw() +
-  ggtitle("Artificial prices of seasonal products Data created by R. Turvey")
+  ggtitle("Artificial prices of seasonal products Data created by R. Turvey")+
+  annotate("rect", xmin=as.Date("1973-04-30"), xmax=as.Date("1973-05-31"), ymin=0, ymax=10, 
+           alpha = .5)
 
 ```
 
-The FEWS is calculated below with a geometric mean splice and a window length of 13 months.
+The decomposition of the Turvey dataset with the contributions between 1973-04-30 and 1973-05-31 can be seen below.
 
-```{r fews_calculation, results='hide'}
-turvey_FEWS <- FEWS(times = turvey$month,
-                    logprice = log(turvey$price),
-                    id = turvey$commodity,
-                    window_length = 13,
-                    weight = turvey$price * turvey$quantity,
-                    splice_pos = "geomean",
-                    num_cores = NULL)
+``` {r}
+#Make sure you restart your session if just installed
+
+str(turvey)
+# 'data.frame':	176 obs. of  4 variables:
+#  $ month    : Date, format: "1970-01-31" "1970-01-31" "1970-01-31" "1970-02-28" ...
+#  $ commodity: Factor w/ 5 levels "Apples","Grapes",..: 1 2 3 1 2 3 1 2 3 1 ...
+#  $ price    : num  1.14 2.48 1.3 1.17 2.75 1.25 1.17 5.07 1.21 1.4 ...
+#  $ quantity : int  3086 82 10266 3765 35 9656 4363 9 7940 4842 ...
+
+contributions <- with(
+    turvey,
+    GEKS_decomp(times = month,
+               price = price,
+               id = commodity,
+               weight = price*quantity,
+               custom_time = c("1973-04-30","1973-05-31"),
+               window_length = NULL)
+ )
+
+#Comparing change from 1973-04-30 to 1973-05-31 
+
+contributions
 
 ```
 
-The resulting index is displayed below
 
-```{r, fews_result}
 
-ggplot(turvey_FEWS$fews, aes(x = price_date, y = fe_indexes)) + 
-  geom_line() + 
-  theme_bw() +
-  ggtitle("FEWS with mean splice for Turvey data")+
-  ylab("Price Index") + 
-  xlab("Date")
+
+```{r}
+ggplot(contributions)+geom_bar(aes(x=id,y=p_contrib), stat = "identity")+coord_flip()+ggtitle("Percentage contribution of observation")+geom_label(aes(x=id,y=p_contrib,label=paste0(round(p_contrib*100,1),"%")))+xlab("Product")+ylab("Percentage contribution")
 
 
 ```
