--- a/README.Rmd
+++ b/README.Rmd
@@ -15,35 +15,35 @@ knitr::opts_chunk$set(
 
 ```
 
-# GEKS-Tornqvist Decomposition
+# GEKS-Törnqvist Decomposition
 
 
-This package focuses on one function `GEKSdecomp`, which decomposes the multilateral GEWKS-Tornqvist index into the contributions of individual commodities. The calculation is based purely on the *Decomposing Multilateral Price Indexes into the Contributions of Individual Commodities* paper written by *Michael Webster* and *Rory C. Tarnow-Mordi*. It uses the techinque 
+This package focuses on one function `GEKSdecomp`, which decomposes the multilateral GEKS-Tornqvist index into the contributions of individual commodities. The calculation is based purely on the *Decomposing Multilateral Price Indexes into the Contributions of Individual Commodities* paper written by *Michael Webster* and *Rory C. Tarnow-Mordi*. It uses the techinque 
 described under section [2.2 Decomposition of the CCD and GEKS Methods](https://www.researchgate.net/publication/333875150_Decomposing_Multilateral_Price_Indexes_into_the_Contributions_of_Individual_Commodities).
 
-This package should be coupled with the [GEKS package](https://github.com/MjStansfi/GEKS_package). Also see the alternates available for the FEWS (time product dummy) multilateral method here [FEWS package](https://github.com/MjStansfi/FEWS_package) and
-[TPD decomposition](https://github.com/MjStansfi/TPDDecomp)
+This package should be coupled with the [GEKS package](https://github.com/MjStansfi/GEKS_package). Also see the alternates available for the FEWS (time product dummy) multilateral method [FEWS package](https://github.com/MjStansfi/FEWS_package) and
+[TPD decomposition](https://github.com/MjStansfi/TPDDecomp).
 
-#Installation
+# Installation
 
 
 The GEKS decomposition function can be installed from GitHub using the following code
-
-``` {r}
-
+```{undefined eval=FALSE, include=TRUE}
 devtools::install_github("MjStansfi/GEKSdecomp")
+```
 
+```{r}
 # Once installed, the package can be loaded as usual
 library(GEKSdecomp)
 ```
 
-#Usage
+# Usage
 
 
 The primary function provided by the the package is the `GEKS_decomp()` function. Running `?GEKS_decomp()` will give all the required information on how to use the function. An example of running the `GEKS_decomp()` the function is shown below.
 
 
-#Example
+# Example
 
 
 This pacakge includes the Turvey dataset as found in the [Consumer Price Index Manual](https://www.ilo.org/wcmsp5/groups/public/---dgreports/---stat/documents/presentation/wcms_331153.pdf).
@@ -82,8 +82,6 @@ contributions <- with(
                window_length = NULL)
  )
 
-#Comparing change from 1973-04-30 to 1973-05-31 
-
 print(contributions)
 
 ```
@@ -91,8 +89,13 @@ print(contributions)
 
 
 
-```{r, percentage_contrib}
-ggplot(contributions)+geom_bar(aes(x=id,y=p_contrib), stat = "identity")+coord_flip()+ggtitle("Percentage contribution of observation")+geom_label(aes(x=id,y=p_contrib,label=paste0(round(p_contrib*100,1),"%")))+xlab("Product")+ylab("Percentage contribution")
+```{r echo=FALSE}
+ggplot(contributions)+
+  geom_bar(aes(x=id,y=p_contrib), stat = "identity")+
+  coord_flip()+
+  ggtitle("Percentage contribution of observation")+
+  geom_label(aes(x=id,y=p_contrib,label=paste0(round(p_contrib*100,1),"%")))+
+  xlab("Product")+ylab("Percentage contribution")
 
 
 ```
