--- a/README.Rmd
+++ b/README.Rmd
@@ -24,6 +24,8 @@ described under section [2.2 Decomposition of the CCD and GEKS Methods](https://
 This package should be coupled with the [GEKS package](https://github.com/MjStansfi/GEKS_package). Also see the alternates available for the FEWS (time product dummy) multilateral method [FEWS package](https://github.com/MjStansfi/FEWS_package) and
 [TPD decomposition](https://github.com/MjStansfi/TPDDecomp).
 
+See the attached pdf to understand how the code was simplified for conditions where either price a or b is missing.
+
 # Installation
 
 
@@ -89,7 +91,7 @@ print(contributions)
 
 
 
-```{r echo=FALSE}
+```{r percentage_contrib, echo=FALSE}
 ggplot(contributions)+
   geom_bar(aes(x=id,y=p_contrib), stat = "identity")+
   coord_flip()+
